# plume

./: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  release.js  svelte.config.js  vite.config.js
.ghithub/workflows/: release.yml
.github/workflows/: release.yml
AudioCapture/: Package.swift  build.sh  test.sh  test_capture  test_capture.swift
AudioCapture/Sources/AudioCapture/: AudioCapture.swift  AudioCaptureC.h  AudioCaptureC.swift
documentation/: wireframes.excalidraw
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/audio-capture/: Cargo.toml  build.rs
src-tauri/audio-capture/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/: libAudioCapture.dylib
src-tauri/src/: capture_state.rs  lib.rs  main.rs
src-tauri/src/audio/: audio_buffer.rs  mod.rs  write_wav.rs
src-tauri/src/commands/: mod.rs  start_capture.rs  stop_capture.rs
src/lib/: ai_models.ts
src/lib/generate/: generate_context.svelte.ts
src/lib/helpers/: StoreContext.ts  ai_models.ts  catch_error.ts  debounced.svelte.ts  notify.ts  parse_folder_name.ts  reactive_now.svelte.ts  reactive_timer.svelte.ts
src/lib/i18n/: context.svelte.ts  index.ts
src/lib/icons/: ChevronIcon.svelte  CopyIcon.svelte  CrossIcon.svelte  DownloadIcon.svelte  FolderIcon.svelte  InfoIcon.svelte  MicIcon.svelte  PaperPlane.svelte  PauseIcon.svelte  PenIcon.svelte  PlayIcon.svelte  (+5 more)
src/routes/: +layout.svelte  +page.svelte
src/styles/: forms.css  tables.css  typography.css
(+32 files in other folders)
